--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Rodnei" >
     <meta name="generator" content="Bluefish 2.2.12" >
     <title>Facens Desafio Python</title>
-
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/">
 
     
