--- a/template/index.html
+++ b/template/index.html
@@ -11,10 +11,6 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/">
 
-    
-
-    
-
 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -173,8 +169,40 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Esta função se apçlica para o cadastro.................</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Button 1</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Button 2</button>
+          <form class="needs-validation" novalidate>
+            <div class="row g-3">
+              <div class="col-sm-6">
+                <label for="firstName" class="form-label">Digite seu nome</label>
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Necessário digitar o nome.
+                </div>
+              </div>
+              <div class="col-12">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="you@example.com" value="" required>
+                <div class="invalid-feedback">
+                  Digite um email válido.
+                </div>
+              </div>
+  
+              <div class="col-md-5">
+                <label for="country" class="form-label">Selecione um Software</label>
+                <select class="form-select" id="country" required>
+                  <option value="">Escolha...</option>
+                  <option>Windows Server 2012</option>
+                  <option>Windows 11</option>
+                  <option>Android</option>
+                </select>
+                <div class="invalid-feedback">
+                  Por favor selecione uma opção valida.
+                </div>
+              </div>
+            <button class="w-100 btn btn-primary btn-lg" type="submit">Enviar informações</button>
+          </form>
+        </div>
+        <!--<button type="button" class="btn btn-primary btn-lg px-4 gap-3">Button 1</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Button 2</button>-->
       </div>
     </div>
   </div>
