Create form to get informations

--- a/template/index.html
+++ b/template/index.html
@@ -176,9 +176,9 @@
             <label for="floatingInput">Email address</label>
           </div>
           <div class="form-floating mb-3">
-            <label for="country" class="form-label">Softwarer</label>
+            <label for="country" class="form-label"></label>
             <select class="form-select" id="country" required>
-              <option value="">Escolha...</option>
+              <option value="">SSoftwares...</option>
               <option>Windows Server</option>
               <option>Windows 11</option>
               <option>Android</option>
