--- a/template/index.html
+++ b/template/index.html
@@ -178,7 +178,7 @@
           <div class="form-floating mb-3">
             <label for="country" class="form-label"></label>
             <select class="form-select" id="country" required>
-              <option value="">SSoftwares...</option>
+              <option value="">Softwares...</option>
               <option>Windows Server</option>
               <option>Windows 11</option>
               <option>Android</option>
@@ -202,6 +202,8 @@
         </form>
       </div>
     </div>
+  </div>
+  
   <div class="b-example-divider"></div>
 
   <div class="px-4 pt-5 my-5 text-center border-bottom">
