--- a/template/index.html
+++ b/template/index.html
@@ -170,14 +170,24 @@
         <p class="col-lg-10 fs-4">Cadastre seu email indicando uma vulnerabilitade e receba informação por email</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+        <form action="result" methop="POST" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="name" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
+            <label for="floatingInput">Digite seu nome</label>
+            <div class="invalid-feedback">
+              Digite um email valido.
+            </div>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="email" name="email_input" class="form-control" id="floatingInput" placeholder="name@example.com" value="" required>
+            <label for="floatingInput">Digite seu email</label>
+            <div class="invalid-feedback">
+              Digite um email valido.
+            </div>
           </div>
           <div class="form-floating mb-3">
             <label for="country" class="form-label"></label>
-            <select class="form-select" id="country" required>
+            <select class="form-select" name="sftw_input" id="country" required>
               <option value="">Softwares...</option>
               <option>Windows Server</option>
               <option>Windows 11</option>
@@ -185,16 +195,22 @@
               <option>Linux Debian</option>
             </select>
             <div class="invalid-feedback">
-              Seleccione uma informação correta
+              Selecione uma informação correta.
             </div>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Data inicial">
+            <input type="date" name="dateS_input" class="form-control" id="floatingPassword" placeholder="Data inicial" required>
             <label for="floatingPassword">Data Inicial</label>
+            <div class="invalid-feedback">
+              Digite uma data inicial valida.
+            </div>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Data Final">
+            <input type="date" name="dateE_input" class="form-control" id="floatingPassword" placeholder="Data Final" required>
             <label for="floatingPassword">Data Final</label>
+            <div class="invalid-feedback">
+              Digite uma data final valida.
+            </div>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Cadastrar</button>
           <hr class="my-4">
@@ -203,7 +219,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="b-example-divider"></div>
 
   <div class="px-4 pt-5 my-5 text-center border-bottom">
