Save txt with form

--- a/template/index.html
+++ b/template/index.html
@@ -212,7 +212,7 @@
               Digite uma data final valida.
             </div>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Cadastrar</button>
+          <button class="w-100 btn btn-lg btn-primary" type="submit" value="submit">Cadastrar</button>
           <hr class="my-4">
           <small class="text-body-secondary">Clique no botão para cadastrar a vulnerabilitade</small>
         </form>
