--- a/template/index.html
+++ b/template/index.html
@@ -187,7 +187,7 @@
           </div>
           <div class="form-floating mb-3">
             <label for="country" class="form-label"></label>
-            <select class="form-select" name="sftw_input" id="country" required>
+            <select class="form-select" name="sof_input" id="country" required>
               <option value="">Softwares...</option>
               <option>Windows Server</option>
               <option>Windows 11</option>
