Save txt with form

--- a/template/index.html
+++ b/template/index.html
@@ -170,7 +170,7 @@
         <p class="col-lg-10 fs-4">Cadastre seu email indicando uma vulnerabilitade e receba informação por email</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form action="result" method="POST" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+        <form action="" method="POST" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
           <div class="form-floating mb-3">
             <input type="name" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
             <label for="floatingInput">Digite seu nome</label>
