Save txt with form

--- a/template/index.html
+++ b/template/index.html
@@ -172,10 +172,10 @@
       <div class="col-md-10 mx-auto col-lg-5">
         <form action="" method="POST" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
           <div class="form-floating mb-3">
-            <input type="name" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
+            <input type="Name" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
             <label for="floatingInput">Digite seu nome</label>
             <div class="invalid-feedback">
-              Digite um email valido.
+              Necessário preencher o campo.
             </div>
           </div>
           <div class="form-floating mb-3">
