Save txt with form

--- a/template/index.html
+++ b/template/index.html
@@ -172,7 +172,7 @@
       <div class="col-md-10 mx-auto col-lg-5">
         <form action="" method="POST" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
           <div class="form-floating mb-3">
-            <input type="email" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
+            <input type="firstName" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
             <label for="floatingInput">Digite seu nome</label>
             <div class="invalid-feedback">
               Necessário preencher o campo.
