--- a/template/pesquisa.html
+++ b/template/pesquisa.html
@@ -5,7 +5,8 @@
       <table border = 1> 
           
             <tr> 
-               <th> {{ dateS }} </th> 
+               <th> {{ dateS }} </th>
+	       <th> {{ dateSs }} </th>
             </tr> 
              
       </table>       
