--- a/template/pesquisa.html
+++ b/template/pesquisa.html
@@ -7,6 +7,7 @@
             <tr> 
                <th> {{ dateS }} </th>
 	       <th> {{ dateSs }} </th>
+	       <th> {{ dateSss}} </th>
             </tr> 
              
       </table>       
