--- a/template/index.html
+++ b/template/index.html
@@ -186,16 +186,10 @@
             </div>
           </div>
           <div class="form-floating mb-3">
-            <label for="country" class="form-label"></label>
-            <select class="form-select" name="sof_input" id="country" required>
-              <option value="">Softwares...</option>
-              <option>Windows Server</option>
-              <option>Windows 11</option>
-              <option>Android</option>
-              <option>Linux Debian</option>
-            </select>
+	    <input type="firstName" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
+            <label for="floatingInput">Digite o software</label>
             <div class="invalid-feedback">
-              Selecione uma informação correta.
+              Necessário preencher o campo.
             </div>
           </div>
           <div class="form-floating mb-3">
