--- a/template/index.html
+++ b/template/index.html
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="form-floating mb-3">
-	    <input type="firstName" name="name_input" class="form-control" id="floatingInput" placeholder="" value="" required>
+	    <input type="firstName" name="sof_input" class="form-control" id="floatingInput" placeholder="" value="" required>
             <label for="floatingInput">Digite o software</label>
             <div class="invalid-feedback">
               Necessário preencher o campo.
