--- a/template/index.html
+++ b/template/index.html
@@ -193,14 +193,14 @@
             </div>
           </div>
           <div class="form-floating mb-3">
-            <input type="date" name="dateS_input" class="form-control" id="floatingPassword" placeholder="Data inicial" min="2000-01-01" required>
+            <input type="date" name="dateS_input" class="form-control" id="floatingPassword" placeholder="Data inicial" min="2001-01-01" max="today" required>
             <label for="floatingPassword">Data Inicial</label>
             <div class="invalid-feedback">
               Digite uma data inicial valida.
             </div>
           </div>
           <div class="form-floating mb-3">
-            <input type="date" name="dateE_input" class="form-control" id="floatingPassword" placeholder="Data Final" min="2000-01-01" required>
+            <input type="date" name="dateE_input" class="form-control" id="floatingPassword" placeholder="Data Final" min="2001-01-01" required>
             <label for="floatingPassword">Data Final</label>
             <div class="invalid-feedback">
               Digite uma data final valida.
