--- a/template/index.html
+++ b/template/index.html
@@ -90,6 +90,7 @@
     window.onload=function(){//from ww  w . j  a  va2s. c  o  m
 	var today = new Date().toISOString().split('T')[0];
 	document.getElementsByName("dateS_input")[0].setAttribute('max', today);
+	document.getElementsByName("dateE_input")[0].setAttribute('max', today);
     }</script>
     
     <!-- Custom styles for this template -->
