--- a/template/index.html
+++ b/template/index.html
@@ -85,13 +85,6 @@
       .bd-mode-toggle {
         z-index: 1500;
       }
-      div#loading {
-      width: 35px;
-      height: 35px;
-      display: none;
-      background: url(/static/img/coffee-loading.gif) no-repeat;
-      cursor: wait;
-      }
     </style>
     <script type="text/javascript">
     window.onload=function(){//from ww  w . j  a  va2s. c  o  m
@@ -183,8 +176,7 @@
 
   <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
-      <div class="col-lg-7 text-center text-lg-start" id="loading">
-      
+      <div class="col-lg-7 text-center text-lg-start">
         <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Vulnerabilidades por email</h1>
         <p class="col-lg-10 fs-4">Cadastre seu email indicando uma vulnerabilitade e receba informação por email</p>
       </div>
