--- a/template/index.html
+++ b/template/index.html
@@ -210,12 +210,23 @@
               Digite uma data inicial valida.
             </div>
           </div>
+	  <fieldset>
+          <legend>Escolha o peiodo de consulta:</legend>
           <div class="form-floating mb-3">
+            <div>
+              <input type="" name="dateE_input" class="form-control" id="floatingPassword" value="30" checked>
+	      <label for="floatingInput"> 30</label>
+            </div>
+            <div>
+              <input type="" name="dateE_input" class="form-control" id="floatingPassword" value="60">
+	      <label for="floatingInput"> 60</label>
+            </div>
+            <!--
             <input type="date" name="dateE_input" class="form-control" id="floatingPassword" placeholder="Data Final" min="2001-01-01" required>
             <label for="floatingPassword">Data Final</label>
             <div class="invalid-feedback">
               Digite uma data final valida.
-            </div>
+            </div> -->
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit" onClick="loading();">Cadastrar</button>
           <hr class="my-4">
