--- a/template/index.html
+++ b/template/index.html
@@ -214,11 +214,11 @@
           <legend>Escolha o peiodo de consulta:</legend>
           <div class="form-floating mb-3">
             <div>
-              <input type="" name="dateE_input" class="form-control" id="floatingPassword" value="30" checked>
+              <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="30" checked>
 	      <label for="floatingInput"> 30</label>
             </div>
             <div>
-              <input type="" name="dateE_input" class="form-control" id="floatingPassword" value="60">
+              <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="60">
 	      <label for="floatingInput"> 60</label>
             </div>
             <!--
