--- a/template/index.html
+++ b/template/index.html
@@ -215,11 +215,11 @@
           <div class="form-floating mb-3">
             <div>
               <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="30" checked>
-	      <label for="floatingInput"> 30</label>
+	      <label for="dateE_input"> 30</label>
             </div>
             <div>
               <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="60">
-	      <label for="floatingInput"> 60</label>
+	      <label for="dateE_input"> 60</label>
             </div>
             <!--
             <input type="date" name="dateE_input" class="form-control" id="floatingPassword" placeholder="Data Final" min="2001-01-01" required>
