--- a/template/index.html
+++ b/template/index.html
@@ -214,11 +214,11 @@
           <fieldset>
           <legend>Escolha o peiodo de consulta:</legend>
           <div>
-              <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="30" checked>
+              <input type="radio" name="dateE_input"  value="30" checked>
 	      <label for="dateE_input"> 30</label>
           </div>
           <div>    
-              <input type="radio" name="dateE_input" class="form-control" id="floatingPassword" value="60">
+              <input type="radio" name="dateE_input"  value="60">
 	      <label for="dateE_input"> 60</label>
           </div>
           </fieldset>
