--- a/template/index.html
+++ b/template/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="form-floating mb-3">
           <fieldset>
-          <legend>Escolha o peiodo de consulta:</legend>
+          <legend class="form-control" id="floatingPassword">Escolha o peiodo de consulta:</legend>
           <div>
               <input type="radio" name="dateE_input"  value="30" checked>
 	      <label for="dateE_input"> 30</label>
@@ -220,6 +220,14 @@
           <div>    
               <input type="radio" name="dateE_input"  value="60">
 	      <label for="dateE_input"> 60</label>
+          </div>
+          <div>    
+              <input type="radio" name="dateE_input"  value="90">
+	      <label for="dateE_input"> 90</label>
+          </div>
+                    <div>    
+              <input type="radio" name="dateE_input"  value="120">
+	      <label for="dateE_input"> 120</label>
           </div>
           </fieldset>
             <!--
