--- a/template/index.html
+++ b/template/index.html
@@ -213,14 +213,14 @@
           <div class="form-floating mb-3">
           <fieldset>
           <legend class="form-control" id="floatingPassword">Escolha o peiodo de consulta:</legend>
-          <div>
+          <div class="form-floatinf mb-3">
               <input type="radio" name="dateE_input"  value="30" checked>
 	      <label for="dateE_input"> 30</label>
               
               <input type="radio" name="dateE_input"  value="60">
 	      <label for="dateE_input"> 60</label>
           </div>
-          <div>    
+          <div class="form-floating  mb=3">    
               <input type="radio" name="dateE_input"  value="90">
 	      <label for="dateE_input"> 90</label>
   
