--- a/template/index.html
+++ b/template/index.html
@@ -213,18 +213,18 @@
           <div class="form-floating mb-3">
           <fieldset>
           <legend class="form-control" id="floatingPassword">Escolha o peiodo de consulta:</legend>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-              <input class="px-4" type="radio" name="dateE_input"  value="30" checked>
-	      <label for="dateE_input"> 30</label>
+          <div class="d-grid gap-2 d-sm-flex mb-5">
+            <input class="px-4" type="radio" name="dateE_input"  value="30" checked>
+	    <label for="dateE_input"> 30</label>
               
-              <input class="px-4" type="radio" name="dateE_input"  value="60">
-	      <label for="dateE_input"> 60</label>
+            <input class="px-4" type="radio" name="dateE_input"  value="60">
+	    <label for="dateE_input"> 60</label>
 
-              <input class="px-4" type="radio" name="dateE_input"  value="90">
-	      <label for="dateE_input"> 90</label>
+            <input class="px-4" type="radio" name="dateE_input"  value="90">
+	    <label for="dateE_input"> 90</label>
   
-              <input class="px-4" type="radio" name="dateE_input"  value="120">
-	      <label for="dateE_input"> 120</label>
+            <input class="px-4" type="radio" name="dateE_input"  value="120">
+	    <label for="dateE_input"> 120</label>
           </div>
           </fieldset>
             <!--
