--- a/template/index.html
+++ b/template/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="form-floating mb-3">
           <fieldset>
-          <legend class="" id="floatingPassword">Escolha o período da consulta:</legend>
+          <legend class="form-control" id="floatingPassword">Escolha o período da consulta:</legend>
           <div class="d-grid gap-2 d-sm-flex"> <!--d-grid gap-2 d-sm-flex mb-5-->
             <input class="px-4" type="radio" name="dateE_input"  value="30" checked>
 	    <label for="dateE_input"> 30</label>
