--- a/template/search.html
+++ b/template/search.html
@@ -163,8 +163,8 @@
       <div class="col-lg-6 mx-auto">
         <p class="fs-5 mb-4">Os dados foram enviados com sucesso, aguarde que logo receberá no email cadastrado</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a href="https://github.com/rodneicilto/DP-L2023" target="_blank"><button type="button" class="btn btn-outline-light btn-lg px-4 me-sm-3 fw-bold">GIT</button></a>
-          <a href="https://dpl23.atlassian.net/jira/software/projects/DL/boards/1/roadmap" target="_blank"><button type="button" class="btn btn-outline-light btn-lg px-4 fw-bold">JIRA</button></a>
+		<a href="{{ url_for('home') }}" target="_blank"><button type="button" class="btn btn-outline-light btn-lg px-4 me-sm-3 fw-bold">Voltar para pesquisa</button></a>
+	  <!--<a href="https://dpl23.atlassian.net/jira/software/projects/DL/boards/1/roadmap" target="_blank"><button type="button" class="btn btn-outline-light btn-lg px-4 fw-bold">JIRA</button></a>-->
         </div>
       </div>
     </div>
